--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,18 @@
 *{
     text-align: center;
-    margin: auto;
+    margin: 0;
+    padding: 0;
     background-color: antiquewhite;
-    overflow: auto;
+    overflow: visible;
 }
 img{
     height: 500px;
-    margin: 100px;
+    width: 550px;
+    margin: 30px;
 
 }
 h1{
-    margin-top: 50px;
+    margin-top: 30px;
     font-size: 50px;
     font-family: 'Courier New', Courier, monospace;
     
@@ -18,11 +20,48 @@ h1{
 
 h3{
     font-family: 'Courier New', Courier, monospace;
-    padding: 25px 150px;
+    padding: 25px 200px;
   
 }
 
-a{
-    padding: 30px;
+
+#titulo a{
+    padding: 20px;
     text-decoration: none;
+    font-size: 23px;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
 }
+#titulo a{
+    text-decoration: none;
+    color: black;
+}
+
+.barra{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-evenly;
+    padding: 40px;
+    background-color: antiquewhite;
+    text-decoration: none;
+    font-size: 
+    30px;
+    
+    
+ 
+}
+
+.barra a{
+    text-decoration: none;
+    color: black;
+}
+
+.barra a:hover{
+    background:linear-gradient(black, white);
+    height: auto;
+    width: 30px;
+    
+}
+
