--- a/views/carta.html
+++ b/views/carta.html
@@ -3,28 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carta</title>
     <link rel="stylesheet"  href="../public/css/style.css">
-    <script src="./script.js" defer></script>
 </head>
 <body>
     <main>
         <div id="carta">
                 <h1>Carta </h1>
-               
-                        
         </div>
 
-
+            <div class="carta2">
+                <h1>Carta sobre o meu gato</h1>
+                <p>Hoje conheci um gato muito especial. Ele tem olhos curiosos, bigodes longos e um miado suave que parece um sussurro. Passa os dias explorando cada canto da casa como se fosse um pequeno rei em seu castelo. Às vezes arisco, outras vezes carinhoso, ele tem o dom de transformar o silêncio em companhia e a rotina em aventura.
+                    Espero que um dia você também conheça um gato assim — daqueles que nos escolhem sem dizer uma palavra.
+                    <br><br>
+                    <strong>Com carinho, Murillo</strong>      
+                </p>
+            </div>
 
 
         
         <nav>
-            <ul class="barra">
+            <ul class="barra2">
                 <a href="../index.html">«</a>
                 <a href="../index.html">1</a>
-                <a href="./views/carta.html">2</a>
-                <a href="">3</a>
+                <a href="./carta.html">2</a>
+                <a href="../views/texto.html">3</a>
                 <a href="">»</a>
             </ul>
         </nav>
