--- a/views/texto.html
+++ b/views/texto.html
@@ -9,19 +9,67 @@
 </head>
 <body>
     <main>
+      
+       <Section class="ativ4">
+
+        <label for="mensagem">Mensagem</label>
+        <br>
+        <br>
+        <button onclick="mundo()">Descubra</button>
+        <br>
+        <br>
+        <p id="resposta"></p>
+        <br>
+
+
+
+        <div id="div">ID</div><br>
+        <button onclick="minhafuncao()">Mudar</button>
+        <!-- <div id="div2" style="background-color: green;">ID</div>
+        <button onclick="outrafuncao()">Clique Aqui</button> -->
+        <br>
+        <br>
+
+        <div name="div3">Name</div><br>
+        <button onclick="minhafuncao2()">Mudar</button>
+        <!-- <div name="div4" style="background-color: green;">Name</div>
+        <button onclick="outrafuncao2()">Clique Aqui</button> -->
+        <br>
+        <br>
+
+        <div class="div5">Class</div><br>
+        <button onclick="minhafuncao3()">Mudar</button>
+        <!-- <div class="div6" style="background-color: green;">Class</div>
+        <button onclick="outrafuncao3()">Clique Aqui</button> -->
+        <br>
+        <br>
+
+
+        <label for="">Valor 1</label>
+        <br>
+        <br>
+        <input type="text" name="" id="valor1" placeholder="Digite aqui"><br>
+        <label for="">Valor 2</label>
+        <br>
+        <br>
+        <input type="text" name="" id="valor2" placeholder="Digite aqui">
+        <br>
+        <br>
+        <button onclick="calcular()">Calcular</button>
+        <p id="resposta2"></p>
        
+       </Section> 
+       
+     
         <nav>
             <ul class="barra">
-                <a href="">«</a>
-                <a href="">1</a>
-                <a href="./views/carta.html">2</a>
-                <a href="./views/texto.html">3</a>
-                <a href="">»</a>
+                <a href="./carta.html">«</a>
+                <a href="../index.html">1</a>
+                <a href="./carta.html">2</a>
+                <a href="./texto.html">3</a>
+                <a href="./texto.html">»</a>
             </ul>
         </nav>
-
-       
-    
     </main>
 
     <footer>
